--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
-	--font-sans: var(--font-geist-sans);
+	--font-sora: var(--font-sora);
 	--font-mono: var(--font-geist-mono);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
@@ -79,7 +79,7 @@
 }
 
 .dark {
-	--background: oklch(0.145 0 0);
+	--background: rgb(28, 28, 28);
 	--foreground: oklch(0.985 0 0);
 	--card: oklch(0.205 0 0);
 	--card-foreground: oklch(0.985 0 0);
